--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<!-- <app-navbar></app-navbar>
-<app-notification *ngIf="showNotification"></app-notification>
-<app-banner [status]="showNotification" (onButtonClick)="handleButtonClick($event)"
-  [subHeading]="'My text'"></app-banner> -->
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
 
-<app-layout>
 
-</app-layout>
